# nexagent

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
docs/: userguide.md
examples/: agents.yaml  demo.py  models.yaml  workflow.yaml
nexagent/: __init__.py  __main__.py
nexagent/agents/: __init__.py  coordinator.py  generic.py  patterns.py  registry.py  subagent.py  workflow.py  workspace.py
nexagent/improvement/: __init__.py  tracker.py
nexagent/inference/: __init__.py  models.py  router.py
nexagent/memory/: __init__.py  tiered.py  vector_store.py
nexagent/observability/: __init__.py  cost.py  tracer.py
nexagent/proactive/: __init__.py  loop.py
nexagent/runtime/: __init__.py  agent_loop.py  context.py
nexagent/tools/: __init__.py  audit.py  discovery.py  registry.py  sandbox.py
nexagent/trust/: __init__.py  policy.py
tests/: test_agent_registry.py  test_coordinator.py  test_generic.py  test_memory.py  test_models.py  test_patterns.py  test_registry.py  test_tool_discovery.py  test_workflow.py  test_workspace.py
