[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexagent"
version = "0.1.0"
description = "NexAgent — a next-generation agentic personal assistant"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "NexAgent Authors" }]
keywords = ["agent", "llm", "assistant", "autonomous", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27",
    "anyio>=4.3",
    "numpy>=1.26",
    "pydantic>=2.6",
    "rich>=13.7",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-api>=1.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
]

[project.scripts]
nexagent = "nexagent.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["nexagent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
